--- a/final/videomem_summary.html
+++ b/final/videomem_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>videomem Project Status (11/17/2014 - 16:58:28)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>videomem Project Status (11/17/2014 - 18:21:12)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>final.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/*.xmsgs?&DataKey=Warning'>232 Warnings (5 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/*.xmsgs?&DataKey=Warning'>227 Warnings (23 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,49 +60,49 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
-<TD ALIGN=RIGHT>262</TD>
+<TD ALIGN=RIGHT>594</TD>
 <TD ALIGN=RIGHT>9,312</TD>
-<TD ALIGN=RIGHT>2%</TD>
+<TD ALIGN=RIGHT>6%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>795</TD>
+<TD ALIGN=RIGHT>1,434</TD>
 <TD ALIGN=RIGHT>9,312</TD>
-<TD ALIGN=RIGHT>8%</TD>
+<TD ALIGN=RIGHT>15%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>518</TD>
+<TD ALIGN=RIGHT>964</TD>
 <TD ALIGN=RIGHT>4,656</TD>
-<TD ALIGN=RIGHT>11%</TD>
+<TD ALIGN=RIGHT>20%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>518</TD>
-<TD ALIGN=RIGHT>518</TD>
+<TD ALIGN=RIGHT>964</TD>
+<TD ALIGN=RIGHT>964</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>518</TD>
+<TD ALIGN=RIGHT>964</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>953</TD>
+<TD ALIGN=RIGHT>1,831</TD>
 <TD ALIGN=RIGHT>9,312</TD>
-<TD ALIGN=RIGHT>10%</TD>
+<TD ALIGN=RIGHT>19%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>795</TD>
+<TD ALIGN=RIGHT>1,434</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>158</TD>
+<TD ALIGN=RIGHT>397</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -126,13 +126,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MULT18X18SIOs</TD>
-<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>10</TD>
 <TD ALIGN=RIGHT>20</TD>
-<TD ALIGN=RIGHT>30%</TD>
+<TD ALIGN=RIGHT>50%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>2.96</TD>
+<TD ALIGN=RIGHT>2.84</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -169,21 +169,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Nov 17 16:57:22 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Warning'>98 Warnings (5 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Info'>12 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Nov 17 16:57:30 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>122 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>122 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Nov 17 16:57:37 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Nov 17 16:58:07 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Warning'>6 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Nov 17 18:18:35 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Warning'>93 Warnings (21 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Info'>18 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Nov 17 18:18:43 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>122 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>122 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Nov 17 18:18:51 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Nov 17 18:20:49 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Warning'>6 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (1 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Nov 17 16:58:12 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Nov 17 16:58:22 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Nov 17 18:20:54 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Nov 17 18:21:06 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Nov 17 16:58:23 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Nov 17 16:58:28 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Nov 17 18:21:07 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Nov 17 18:21:12 2014</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/17/2014 - 17:00:03</center>
+<br><center><b>Date Generated:</b> 11/17/2014 - 18:21:12</center>
 </BODY></HTML>
