--- a/final/videomem_summary.html
+++ b/final/videomem_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>videomem Project Status (12/06/2014 - 17:50:19)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>videomem Project Status (12/06/2014 - 22:09:37)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>final.xise</TD>
@@ -13,7 +13,7 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>videomem</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Mapped</TD>
+<TD>Programming File Generated</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -25,20 +25,21 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/*.xmsgs?&DataKey=Warning'>305 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/*.xmsgs?&DataKey=Warning'>286 Warnings (2 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-&nbsp;</TD>
+<A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+<A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
@@ -47,7 +48,7 @@ No Errors</TD>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>&nbsp;&nbsp;</TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -59,49 +60,49 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
-<TD ALIGN=RIGHT>1,885</TD>
+<TD ALIGN=RIGHT>1,895</TD>
 <TD ALIGN=RIGHT>9,312</TD>
 <TD ALIGN=RIGHT>20%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>4,001</TD>
+<TD ALIGN=RIGHT>4,111</TD>
 <TD ALIGN=RIGHT>9,312</TD>
-<TD ALIGN=RIGHT>42%</TD>
+<TD ALIGN=RIGHT>44%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>2,729</TD>
+<TD ALIGN=RIGHT>2,773</TD>
 <TD ALIGN=RIGHT>4,656</TD>
-<TD ALIGN=RIGHT>58%</TD>
+<TD ALIGN=RIGHT>59%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>2,729</TD>
-<TD ALIGN=RIGHT>2,729</TD>
+<TD ALIGN=RIGHT>2,773</TD>
+<TD ALIGN=RIGHT>2,773</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>2,729</TD>
+<TD ALIGN=RIGHT>2,773</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>5,229</TD>
+<TD ALIGN=RIGHT>5,346</TD>
 <TD ALIGN=RIGHT>9,312</TD>
-<TD ALIGN=RIGHT>56%</TD>
+<TD ALIGN=RIGHT>57%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>4,001</TD>
+<TD ALIGN=RIGHT>4,111</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>1,228</TD>
+<TD ALIGN=RIGHT>1,235</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -131,7 +132,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.45</TD>
+<TD ALIGN=RIGHT>3.41</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -140,7 +141,27 @@ System Settings</A>
 
 
 
-
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Performance Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PerformanceSummary"><B>[-]</B></a></TD></TR>
+<TR ALIGN=LEFT>
+<TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
+<TD>0 (Setup: 0, Hold: 0)</TD>
+<TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+</TR>
+<TR ALIGN=LEFT>
+<TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
+<A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.unroutes'>All Signals Completely Routed</A></TD>
+<TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+</TR>
+<TR ALIGN=LEFT>
+<TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
+<TD>
+<A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TABLE>
 
 
 
@@ -148,21 +169,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sat Dec 6 17:49:50 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Warning'>180 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Info'>42 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sat Dec 6 17:50:00 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>122 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>122 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sat Dec 6 17:50:17 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Wed Dec 3 21:46:19 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Warning'>6 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sat Dec 6 22:05:36 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Warning'>155 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/xst.xmsgs?&DataKey=Info'>39 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sat Dec 6 22:05:47 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>122 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>122 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sat Dec 6 22:05:59 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Sat Dec 6 22:09:00 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Warning'>5 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (1 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Wed Dec 3 21:46:27 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Wed Dec 3 21:47:18 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Sat Dec 6 22:09:08 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\videomem.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Sat Dec 6 22:09:31 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed Dec 3 21:47:19 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed Dec 3 21:47:25 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sat Dec 6 22:09:32 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Aaron/Documents/ise/final\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sat Dec 6 22:09:37 2014</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/06/2014 - 17:50:19</center>
+<br><center><b>Date Generated:</b> 12/06/2014 - 22:11:09</center>
 </BODY></HTML>
